benchmarks/verus/bignum/vericoder_glm_15-09_18h46/debug/bignum_ModExpPow2_DivMod_Mul_iter2_error.log
=== Verification Error - Iteration 2 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExpPow2_DivMod_Mul.rs
Time: 2025-09-15 19:25:04

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0277]: the trait bound `std::iter::Rev<std::ops::Range<usize>>: vstd::pervasive::ForLoopGhostIteratorNew` is not satisfied
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExpPow2_DivMod_Mul_impl.rs:78:13
   |
78 | /             for j in (0..remainder.len()).rev() {
79 | |                 let a_bit = remainder[j];
80 | |                 let b_bit = padded_divisor[j];
81 | |                 let a = if a_bit == '1' { 1 } else { 0 };
...  |
91 | |             }
   | |_____________^ the trait `vstd::pervasive::ForLoopGhostIteratorNew` is not implemented for `std::iter::Rev<std::ops::Range<usize>>`
   |
   = help: the following other types implement trait `vstd::pervasive::ForLoopGhostIteratorNew`:
             std::collections::hash_map::Iter<'a, Key, Value>
             std::collections::hash_map::Keys<'a, Key, Value>
             std::collections::hash_map::Values<'a, Key, Value>
             std::collections::hash_set::Iter<'a, Key>
             std::collections::vec_deque::Iter<'a, T>
             std::ops::Range<A>
             std::slice::Iter<'a, T>
             std::str::Chars<'a>
             std::vec::IntoIter<T, A>

error[E0277]: the trait bound `std::iter::Rev<std::ops::Range<usize>>: vstd::pervasive::ForLoopGhostIteratorNew` is not satisfied
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExpPow2_DivMod_Mul_impl.rs:78:22
   |
78 |             for j in (0..remainder.len()).rev() {
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `vstd::pervasive::ForLoopGhostIteratorNew` is not implemented for `std::iter::Rev<std::ops::Range<usize>>`
   |
   = help: the following other types implement trait `vstd::pervasive::ForLoopGhostIteratorNew`:
             std::collections::hash_map::Iter<'a, Key, Value>
             std::collections::hash_map::Keys<'a, Key, Value>
             std::collections::hash_map::Values<'a, Key, Value>
             std::collections::hash_set::Iter<'a, Key>
             std::collections::vec_deque::Iter<'a, T>
             std::ops::Range<A>
             std::slice::Iter<'a, T>
             std::str::Chars<'a>
             std::vec::IntoIter<T, A>

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExpPow2_DivMod_Mul_impl.rs:211:21
    |
211 |         for i in 0..n {
    |                     ^ expected integer, found `int`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.

--------------------------------------------------------------------------------

Additional Output:
error[E0277]: the trait bound `std::iter::Rev<std::ops::Range<usize>>: vstd::pervasive::ForLoopGhostIteratorNew` is not satisfied
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExpPow2_DivMod_Mul_impl.rs:78:13
   |
78 | /             for j in (0..remainder.len()).rev() {
79 | |                 let a_bit = remainder[j];
80 | |                 let b_bit = padded_divisor[j];
81 | |                 let a = if a_bit == '1' { 1 } else { 0 };
...  |
91 | |             }
   | |_____________^ the trait `vstd::pervasive::ForLoopGhostIteratorNew` is not implemented for `std::iter::Rev<std::ops::Range<usize>>`
   |
   = help: the following other types implement trait `vstd::pervasive::ForLoopGhostIteratorNew`:
             std::collections::hash_map::Iter<'a, Key, Value>
             std::collections::hash_map::Keys<'a, Key, Value>
             std::collections::hash_map::Values<'a, Key, Value>
             std::collections::hash_set::Iter<'a, Key>
             std::collections::vec_deque::Iter<'a, T>
             std::ops::Range<A>
             std::slice::Iter<'a, T>
             std::str::Chars<'a>
             std::vec::IntoIter<T, A>

error[E0277]: the trait bound `std::iter::Rev<std::ops::Range<usize>>: vstd::pervasive::ForLoopGhostIteratorNew` is not satisfied
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExpPow2_DivMod_Mul_impl.rs:78:22
   |
78 |             for j in (0..remainder.len()).rev() {
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `vstd::pervasive::ForLoopGhostIteratorNew` is not implemented for `std::iter::Rev<std::ops::Range<usize>>`
   |
   = help: the following other types implement trait `vstd::pervasive::ForLoopGhostIteratorNew`:
             std::collections::hash_map::Iter<'a, Key, Value>
             std::collections::hash_map::Keys<'a, Key, Value>
             std::collections::hash_map::Values<'a, Key, Value>
             std::collections::hash_set::Iter<'a, Key>
             std::collections::vec_deque::Iter<'a, T>
             std::ops::Range<A>
             std::slice::Iter<'a, T>
             std::str::Chars<'a>
             std::vec::IntoIter<T, A>

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExpPow2_DivMod_Mul_impl.rs:211:21
    |
211 |         for i in 0..n {
    |                     ^ expected integer, found `int`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
